# Kugua

./: .gitignore  CLAUDE_desktop.md  CLAUDE_global.md  INTEGRATION.md  README.md  chaos_report_v0.3.0.md  install.bat  install.sh  mcp_config.json.example  pyproject.toml
benchmarks/: adversarial_tests.py  benchmark_runner.py  calibrate_ks_thresholds.py  chaos_runner.py
cli/: demo.py  init.py  serve.py  top.py  worker.py
cli/templates/: agent_with_guardian_langgraph.py.tmpl
examples/: 01_langchain_agent.py  02_cli_tool.py  03_hallucination_detector.py  04_code_review_agent.py
experiments/: SAFETY_CALIBRATION.md  ks_calibration_data.csv
experiments/exp1_safety_gate/: run.sh  run_experiment.py
experiments/exp1_safety_gate/output/: report.md  summary.json
experiments/exp2_hallucination/: run.sh  run_experiment.py
experiments/exp3_double_loop/: run_experiment.py
experiments/exp4_critical_slowing/: run_advanced_validation.py  run_deep_validation.py  run_experiment.py  run_tipping_sweep.py
kb_store/: knowledge.json
kugua/: __init__.py  api_server.py  budget.py  causal_graph.py  config.py  constants.jsonl  context.py  context_compressor.py  critical_slowing.py  diffusion.py  double_loop.py  ev_log.py  executor.py  graph.py  i18n.py  kb_graph_bridge.py  kernel.py  knowledge.py  main_loop.py  meta_reviewer.py  mobius.py  negentropy.py  observer.py  permission.py  safety.py  state.py  states.py  tools.py  versioning.py
kugua-code/: README.md  install.sh  pyproject.toml
kugua-code/.codex/artifacts/: context_state.json  safety.json  state.json
kugua-code/cli/: checker.py
kugua-code/kugua/: __init__.py  api_server.py  client.py  config.py  context_compressor.py  diffusion.py  double_loop.py  efficacy.py  ev_log.py  executor.py  graph.py  guardian.py  kb_graph_bridge.py  knowledge.py  main_loop.py  meta_reviewer.py  mobius.py  negentropy.py  observer.py  permission.py  safety.py  states.py  tools.py
kugua-code/kugua/calibration/: __init__.py  bayesian.py
kugua-code/mcp/: server.py
kugua/calibration/: bayesian.py
mcp/: server.py
tests/: kugua_kernel_tests.py  kugua_mobius_tests.py  package_kugua.py  test_config.py  test_critical_slowing.py  test_diffusion.py  test_e2e_integration.py  test_efficacy.py  test_error_degradation.py  test_guardian.py  test_kernel.py  test_main_loop.py  test_mobius.py  test_negentropy.py  test_safety.py  test_states.py
tools/: check_llm.py
(+11 files in other folders)
